--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,9 +5,11 @@
 ###░░░░░░░░░██║░░██╗██╔══██╗░░╚██╔╝░░██╔═══╝░░░░██║░░░██╔══██╗██║░░██║░░░██║░░░░░░░░░░░░###
 ###░░░░░░░░░╚█████╔╝██║░░██║░░░██║░░░██║░░░░░░░░██║░░░██████╦╝╚█████╔╝░░░██║░░░░░░░░░░░░###
 ###░░░░░░░░░░╚════╝░╚═╝░░╚═╝░░░╚═╝░░░╚═╝░░░░░░░░╚═╝░░░╚═════╝░░╚════╝░░░░╚═╝░░░░░░░░░░░░###
-###░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ V 1.31 BY REGIUSS ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░###
+###░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ V 1.42 BY REGIUSS ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░###
 
 DEBUG: false
+CheckUpdate: true
+AutoUpdate: true
 
 #Настройка антикапчи
 Сaptcha:
